--- a/newsboat/.config/newsboat/config
+++ b/newsboat/.config/newsboat/config
@@ -38,7 +38,7 @@ color   article       default     default
 color   listnormal_unread     default default bold
 color   listfocus_unread      black   yellow  bold
 
-browser handler.sh
+# browser handler.sh
 
 macro , open-in-browser
 macro t set browser "yt.sh -v %u"; open-in-browser ; set browser "$BROWSER %u"
@@ -46,5 +46,5 @@ macro a set browser "yt.sh -a %u"; open-in-browser ; set browser "$BROWSER %u"
 macro v set browser "setsid nohup mpv"; open-in-browser ; set browser linkhandler
 macro w set browser "w3m"; open-in-browser ; set browser linkhandler
 # macro M set browser "surf"; open-in-browser ; set browser linkhandler
-# macro p set browser "dmenuhandler"; open-in-browser ; set browser linkhandler
+macro p set browser "handler.sh"; open-in-browser ; set browser "BROWSER %u"
 macro c set browser "xsel -b <<<" ; open-in-browser ; set browser linkhandler
