--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ qutebrowser/.config/qutebrowser/quickmarks
 vifm/.config/vifm/scripts/
 vifm/.config/vifm/vifm-help.txt
 vifm/.config/vifm/vifminfo
+ncmpcpp/.config/mpd/log
+ncmpcpp/.config/mpd/pid
+ncmpcpp/.config/mpd/database
+taskwarrior/.config/taskwarrior/taskrc
+taskwarrior/.config/taskwarrior/taskrc
+ncmpcpp/.config/mpd/state
+ncmpcpp/.config/mpd/sticker.sql
+ncmpcpp/.config/ncmpcpp/error.log
