--- a/taskwarrior/.taskrc
+++ b/taskwarrior/.taskrc
@@ -1,29 +1,30 @@
 data.location=~/.task
 
 urgency.user.tag.inbox.coefficient=0
+confirmation=no
 
 # Inbox report
 report.inbox.columns             = id,description
 report.inbox.description         = Inbox
-report.inbox.filter              = status:pending limit:page (+in)
+report.inbox.filter              = status:pending limit:page (+inbox)
 report.inbox.labels              = ID,Description
 
 # Inbox ids
 report.inboxd.columns             = id
 report.inboxd.description         = Inbox count
-report.inboxd.filter              = status:pending (+in)
+report.inboxd.filter              = status:pending (+inbox)
 report.inboxd.labels              = ID
 
 # Inbox desc
 report.desc.columns             = description
 report.desc.description         = Inbox descriptions
-report.desc.filter              = status:pending (+in)
+report.desc.filter              = status:pending (+inbox)
 report.desc.labels              = description
 
 # Default
 report.default.columns           = project,description.count,tags,start.age
 report.default.description       = TODO list
-report.default.filter            = status:pending limit:page (-in)
+report.default.filter            = status:pending limit:page (-in, -someday)
 report.default.labels            = Project,Description,Tag,Start
 report.default.sort				 = urgency-
 
