--- a/w3m/.w3m/config
+++ b/w3m/.w3m/config
@@ -1,8 +1,8 @@
 tabstop 8
 indent_incr 4
-pixel_per_char 7
-pixel_per_line 14
-frame 0
+pixel_per_char 10
+pixel_per_line 22
+frame 1
 target_self 0
 open_tab_blank 0
 open_tab_dl_list 0
@@ -21,7 +21,7 @@ display_borders 0
 fold_textarea 0
 display_ins_del 1
 ignore_null_img_alt 1
-view_unseenobject 1
+view_unseenobject 0
 display_image 0
 pseudo_inlines 1
 auto_image 0
@@ -58,8 +58,6 @@ vi_prec_num 0
 mark_all_pages 0
 wrap_search 0
 ignorecase_search 1
-use_migemo 1
-migemo_command cmigemo -q -d /usr/share/cmigemo/utf-8/migemo-dict
 use_mouse 1
 reverse_mouse 0
 relative_wheel_scroll 0
@@ -74,34 +72,34 @@ document_root
 personal_document_root 
 cgi_bin 
 index_file 
-mime_types ~/.w3m/mime.types, /etc/mime.types
-mailcap ~/.w3m/mailcap, /etc/w3m/mailcap, /etc/mailcap
-urimethodmap ~/.w3m/urimethodmap, /etc/w3m/urimethodmap
-editor sensible-editor
+mime_types ~/.mime.types, /usr/etc/mime.types
+mailcap ~/.w3m/mailcap, /usr/etc/w3m/mailcap
+urimethodmap ~/.w3m/urimethodmap, /usr/etc/w3m/urimethodmap
+editor /usr/bin/vi
 mailto_options 1
-mailer xdg-open mailto:%s
-extbrowser sensible-browser
-extbrowser2 sh -c 'printf %s "$0" | xclip -selection CLIPBOARD'
-extbrowser3 chromium %s &
-extbrowser4 epiphany %s &
-extbrowser5 konqueror %s &
-extbrowser6 curl -L -O -C - %s &
-extbrowser7 wget -c
-extbrowser8 url=%s && printf %s "$url" | xsel && printf %s "$url" | xsel -b &
-extbrowser9 mpv %s &
+mailer /usr/bin/mail
+extbrowser /usr/bin/firefox
+extbrowser2 
+extbrowser3 
+extbrowser4 
+extbrowser5 
+extbrowser6 
+extbrowser7 
+extbrowser8 
+extbrowser9 
 bgextviewer 1
 use_lessopen 0
 passwd_file ~/.w3m/passwd
 disable_secret_security_check 0
-ftppasswd anonymous@
-ftppass_hostnamegen 0
+ftppasswd 
+ftppass_hostnamegen 1
 pre_form_file ~/.w3m/pre_form
 siteconf_file ~/.w3m/siteconf
 user_agent 
 no_referer 0
 accept_language en;q=1.0
 accept_encoding gzip, compress, bzip, bzip2, deflate
-accept_media text/html, text/*;q=0.5, image/*, application/*, message/*, audio/*, x-scheme-handler/*, video/*, inode/*
+accept_media text/html, text/*;q=0.5, image/*
 argv_is_url 1
 retry_http 1
 default_url 1
@@ -114,16 +112,15 @@ max_news 50
 use_proxy 1
 http_proxy 
 https_proxy 
-gopher_proxy 
 ftp_proxy 
 no_proxy 
-noproxy_netaddr 0
+noproxy_netaddr 1
 no_cache 0
 ssl_forbid_method 2, 3
 ssl_verify_server 1
 ssl_cert_file 
 ssl_key_file 
-ssl_ca_path /etc/ssl/certs
+ssl_ca_path 
 ssl_ca_file 
 use_cookie 1
 show_cookie 0
