--- a/newsboat/.config/newsboat/config
+++ b/newsboat/.config/newsboat/config
@@ -40,11 +40,14 @@ color   listfocus_unread      black   yellow  bold
 
 # browser handler.sh
 
-macro , open-in-browser
-macro t set browser "yt.sh -v %u"; open-in-browser ; set browser "$BROWSER %u"
-macro a set browser "yt.sh -a %u"; open-in-browser ; set browser "$BROWSER %u"
-macro v set browser "setsid nohup mpv"; open-in-browser ; set browser linkhandler
-macro w set browser "w3m"; open-in-browser ; set browser linkhandler
-# macro M set browser "surf"; open-in-browser ; set browser linkhandler
-macro p set browser "handler.sh"; open-in-browser ; set browser "BROWSER %u"
-macro c set browser "xsel -b <<<" ; open-in-browser ; set browser linkhandler
+# macro , open-in-browser
+browser "/usr/local/bin/w3m %u"
+macro p set browser "handler.sh"; open-in-browser ; set browser "/usr/local/bin/w3m %u"
+
+# macro t set browser "yt.sh -v %u"; open-in-browser ; set browser "$BROWSER %u"
+# macro a set browser "yt.sh -a %u"; open-in-browser ; set browser "$BROWSER %u"
+# macro v set browser "setsid nohup mpv"; open-in-browser ; set browser linkhandler
+# macro w set browser "w3m"; open-in-browser ; set browser linkhandler
+# # macro M set browser "surf"; open-in-browser ; set browser linkhandler
+# macro p set browser "handler.sh"; open-in-browser ; set browser "BROWSER %u"
+# macro c set browser "xsel -b <<<" ; open-in-browser ; set browser linkhandler
