--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,62 +1,19 @@
-# vim: filetype=i3
+# vim:filetype=i3
 
-font pango:FuraCode Nerd Font 10
-#new_window 1pixel
+# BASICS
+
+font pango:monospace 8
 hide_edge_borders both
 
-for_window [class="^.*"] border normal
-# pixel 1
+for_window [class="^.*"] border pixel 1
 gaps inner 10
 gaps outer 5
 set $term --no-startup-id $TERMINAL
 set $mod Mod4
 
-# #---Dropdown Windows---# #
- # General dropdown window traits. The order can matter. */
-#for_window [instance="scratchpad"] floating enable */
-#for_window [instance="scratchpad"] move scratchpad */
-#for_window [instance="scratchpad"] sticky enable */
-#for_window [instance="scratchpad"] scratchpad show */
-#for_window [instance="scratchpad"] resize set 625 450 */
-#for_window [instance="scratchpad"] resize set 800 300 */
-#for_window [instance="scratchpad"] border pixel 3 */
-#for_window [instance="scratchpad"] border pixel 2 */
-#for_window [instance="scratchpad"] move position center */
-#for_window [instance="scratchpad"] move window to scratchpad, scratchpad show
-##bindsym $mod+F1 exec --no-startup-id urxvt -name scratchpad -e ncmpcpp
-##exec_always --no-startup-id sh ~/.config/i3/dock
-## exec_always --no-startup-id autorandr --change && remaps
-##exec_always --no-startup-id sh ~/.config/polybar/launch.sh
-#
-#exec --no-startup-id urxvt -name scratchpad
-#for_window [title="scratchpad"] move scratchpad
-#bindsym $mod+u [title="scratchpad"] scratchpad show, resize set 940 600, move position center
+# BAR
 
-#tmux for terminals/weechat/builds and upgrades
-exec $TERMINAL -title spad -e sh -c "tmux attach -t spad || tmux new-session -s spad"
-#bindsym u [title="spad"] scratchpad show
-bindsym $mod+u exec --no-startup-id $TERMINAL -title spad -e sh -c "tmux attach -t spad || tmux new-session -s spad"
-for_window [title="spad"] move scratchpad
-
-
-#file manager
-bindsym $mod+F12 [title="ranger-session"] scratchpad show
-bindsym $mod+Shift+F12 exec --no-startup-id rxvt -T "ranger-session" -e sh -c "tmux attach -t ranger-session || tmux new-session -s ranger-session -d ranger"
-for_window [title="ranger-session"] move scratchpad
-for_window [title="ranger-session"] resize grow height 150 px
-for_window [title="ranger-session"] resize grow width 200 px
-#music
-#bindsym Scroll_Lock [title="ncmpcpp_music"] scratchpad show
-#bindsym $mod+u exec --no-startup-id $term -title music -e sh -c "tmux attach -t ncmpcpp_music || tmux new-session -s ncmpcpp_music -d ncmpcpp"
-#for_window [title="ncmpcpp_music"] move scratchpad
-#for_window [title="ncmpcpp_music"] resize grow height 350 px
-#for_window [title="ncmpcpp_music"] resize grow width 700 px
-
-
-
-
-
-
+# i3blocks
 bar {
 	font pango:mono 10
 	status_command i3blocks
@@ -65,133 +22,55 @@ bar {
 	modifier None
 }
 
-#bar{
-#        position top
-#        font pango:mono 10
-#        status_command i3blocks
-#        i3bar_command i3bar -t
-#        strip_workspace_numbers yes
-#        tray_output none
-#        # height 17
-#        # colors
-#        # {
-#        #         background #00000088
-#        #         statusline #ffffff
-#        #         separator  #ffffff
-#
-#        #         focused_workspace  #00000088 #ffffffff #000000
-#        #         active_workspace   #00000088 #00000088 #ffffff
-#        #         inactive_workspace #00000088 #00000088 #ffffff
-#        #         urgent_workspace   #00000088 #00000088 #ffffff
-#        #         binding_mode       #ff666688 #ff222288 #000000
-#        # }
-#
-#}
+# BINDINGS
 
-# #---Basic Bindings---# #
-bindsym $mod+Shift+Return	exec --no-startup-id samedir
-
-bindsym $mod+Shift+space 	floating toggle
-bindsym $mod+space		focus mode_toggle
-
-bindsym $mod+Escape		workspace prev
-bindsym $mod+Shift+Escape 	exec --no-startup-id prompt "Exit i3?" "i3-msg exit"
-#STOP/HIDE EVERYTHING:
-bindsym $mod+Shift+Delete	exec --no-startup-id lmc truemute ; exec --no-startup-id lmc pause ; exec --no-startup-id pauseallmpv; workspace 0; exec $term -e htop ; exec $term -e $FILE
-
-# #---Letter Key Bindings---# #
-bindsym $mod+q			[con_id="__focused__" instance="^(?!dropdown_).*$"] kill
-bindsym $mod+Shift+q		[con_id="__focused__" instance="^(?!dropdown_).*$"] exec --no-startup-id kill -9 `xdotool getwindowfocus getwindowpid`
-
-bindsym $mod+Shift+r		exec --no-startup-id winresize
-
-bindsym $mod+t			split toggle
-bindsym $mod+Shift+t		gaps inner current set 10; gaps outer current set 5
-
-bindsym $mod+Shift+y	resize grow width 1 px or 1 ppt
-
-# bindsym $mod+u			exec --no-startup-id ddspawn.sh tmuxdd.sh */
-# bindsym $mod+u exec --no-startup-id  urxvt -name scratchpad -e ncmpcpp
-bindsym $mod+Shift+u    resize shrink height 1 px or 1 ppt
-
-bindsym $mod+Shift+i    resize grow height 1 px or 1 ppt
-
-bindsym $mod+o			sticky toggle
-bindsym $mod+Shift+o	resize shrink width 1 px or 1 ppt
-
-bindsym $mod+a			exec --no-startup-id ddspawn dropdowncalc -f mono:pixelsize=24
-
-bindsym $mod+s			gaps inner current plus 5
-bindsym $mod+Shift+s		gaps inner current minus 5
-
-bindsym $mod+Shift+d		gaps inner current set 0; gaps outer current set 0
-
-set $freeze Distraction-free mode (super+shift+f to reactivate bindings)
-mode "$freeze" { bindsym $mod+Shift+f mode "default"
-}
-
-bindsym $mod+f			fullscreen toggle
-bindsym $mod+Shift+f		mode "$freeze" ;; exec --no-startup-id notify-send "Distraction-free mode activated." "Press Super+Shift+f to return."
-
-bindsym $mod+g			workspace prev
-
+# Movements
 bindsym $mod+h			focus left
 bindsym $mod+Shift+h		move left 30
-bindsym $mod+Ctrl+h		move workspace to output left
-
 bindsym $mod+j			focus down
 bindsym $mod+Shift+j		move down 30
-bindsym $mod+Ctrl+j		move workspace to output down
-
 bindsym $mod+k			focus up
 bindsym $mod+Shift+k		move up 30
-bindsym $mod+Ctrl+k		move workspace to output up
-
 bindsym $mod+l			focus right
 bindsym $mod+Shift+l		move right 30
-bindsym $mod+Ctrl+l		move workspace to output right
 
-bindsym $mod+z			gaps outer current plus 5
+# Basics
+bindsym $mod+q			[con_id="__focused__" instance="^(?!dropdown_).*$"] kill
+bindsym $mod+f			fullscreen toggle
+bindsym $mod+Shift+F2		restart
+
+# Launchers
+bindsym $mod+u 			[instance="dropdown"] scratchpad show; [instance="dropdown"] move position center
+
+
+# Toggles
+bindsym $mod+Shift+space         floating toggle
+bindsym $mod+space		focus    mode_toggle
+bindsym $mod+t			split    toggle
+bindsym $mod+b			bar      mode toggle
+bindsym $mod+Shift+f		mode "$freeze" ;; exec --no-startup-id notify-send "Distraction-free mode activated." "Press Super+Shift+f to return." -t 1000
+
+# Gaps
+bindsym $mod+Shift+t		gaps inner current set 10; gaps outer current set 5
+bindsym $mod+s			gaps     inner current plus 5
+bindsym $mod+Shift+s		gaps inner current minus 5
+bindsym $mod+Shift+d		gaps inner current set 0; gaps outer current set 0
+bindsym $mod+z			gaps     outer current plus 5
 bindsym $mod+Shift+z		gaps outer current minus 5
 
-bindsym $mod+c			exec --no-startup-id cabl
 
-bindsym $mod+v			exec --no-startup-id $term -e $EDITOR -c "VimwikiIndex"
 
-bindsym $mod+b			bar mode toggle
-bindsym $mod+Shift+b		floating toggle; sticky toggle; exec --no-startup-id hover left
+# Workspaces
 
-bindsym $mod+Shift+n		floating toggle; sticky toggle; exec --no-startup-id hover right
-
-# #---Workspace Bindings---# #
-bindsym $mod+Home		workspace $ws1
-bindsym $mod+Shift+Home		move container to workspace $ws1
-bindsym $mod+End		workspace $ws10
-bindsym $mod+Shift+End		move container to workspace $ws10
-bindsym $mod+Prior		workspace prev
-bindsym $mod+Shift+Prior	move container to workspace prev
-bindsym $mod+Next		workspace next
-bindsym $mod+Shift+Next		move container to workspace next
-bindsym $mod+Tab		workspace back_and_forth
-bindsym $mod+XF86Back		workspace prev
-bindsym $mod+Shift+XF86Back	move container to workspace prev
-bindsym $mod+XF86Forward	workspace next
-bindsym $mod+Shift+XF86Forward	move container to workspace next
-bindsym $mod+semicolon		workspace next
-bindsym $mod+apostrophe		split horizontal ;; exec $term
-bindsym $mod+slash		split vertical ;; exec $term
-bindsym $mod+Shift+slash	kill
-bindsym $mod+backslash		workspace back_and_forth
-
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
+set $ws1  "1"
+set $ws2  "2"
+set $ws3  "3"
+set $ws4  "4"
+set $ws5  "5"
+set $ws6  "6"
+set $ws7  "7"
+set $ws8  "8"
+set $ws9  "9"
 set $ws10 "10"
 
 # switch to workspace
@@ -218,22 +97,23 @@ bindsym $mod+Shift+8	move container to workspace $ws8
 bindsym $mod+Shift+9	move container to workspace $ws9
 bindsym $mod+Shift+0	move container to workspace $ws10
 
-for_window [class="Pinentry"] sticky enable
-for_window [class="sent"] border pixel 0px
-for_window [title="GIMP Startup"] move workspace $ws5
-# for_window [class="qutebrowser"] move workspace $ws9
-for_window [class="Gimp"] move workspace $ws5
-for_window [window_role="GtkFileChooserDialog"] resize set 800 600
-for_window [window_role="GtkFileChooserDialog"] move position center
-for_window [title="Default - Wine desktop"] floating enable
+# Resize
+bindsym $mod+Shift+o	exec --no-startup-id i3resize.sh right
+bindsym $mod+Shift+i	exec --no-startup-id i3resize.sh up
+bindsym $mod+Shift+u	exec --no-startup-id i3resize.sh down
+bindsym $mod+Shift+y	exec --no-startup-id i3resize.sh left
 
-# Bindings to make the webcam float and stick.
-for_window [title="mpvfloat"] floating enable
-for_window [title="mpvfloat"] sticky enable
-for_window [title="mpvfloat"] border pixel 0
-no_focus [title="mpvfloat"]
 
-# #---Function Buttons---# #
-bindsym $mod+Shift+F2		restart
 
-# #---Arrow Keys---# #
+# CUSTOM
+
+# Scratchpads
+for_window [instance="dropdown"] floating enable
+for_window [instance="dropdown"] resize set 625 400
+for_window [instance="dropdown"] move scratchpad
+for_window [instance="dropdown"] border pixel 3
+exec --no-startup-id $term -name dropdown -e tmux
+
+# Freeze Mode
+set $freeze Distraction-free mode (super+shift+f to reactivate bindings)
+mode "$freeze" { bindsym $mod+Shift+f mode "default"
