--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -78,7 +78,8 @@ set $ws9  "9"
 set $ws10 "10"
 
 # switch to workspace
-bindsym $mod+1		workspace $ws1 bindsym $mod+2		workspace $ws2
+bindsym $mod+1		workspace $ws1
+bindsym $mod+2		workspace $ws2
 bindsym $mod+3		workspace $ws3
 bindsym $mod+4		workspace $ws4
 bindsym $mod+5		workspace $ws5
