--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,7 @@
+set -s escape-time 0
+
+
+
 set -g prefix C-a
 setw -g mode-keys vi
 setw -g mode-style bg=black
@@ -150,3 +154,6 @@ bind -r C-l resize-pane -R 5
 # bind M-- select-layout "even-vertical"
 # bind M-| select-layout "even-horizontal"
 # bind M-r rotate-window
+
+
+
