--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ beets/.config/beets/musiclibrary.db
 abook/.config/abook/addressbook~
 beets/.config/beets/state.pickle
 qutebrowser/.config/qutebrowser/autoconfig.yml
+anki/.local/share/Anki2/Utente 1/
+anki/.local/share/Anki2/crash.log
