--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ beets/.config/beets/state.pickle
 qutebrowser/.config/qutebrowser/autoconfig.yml
 anki/.local/share/Anki2/Utente 1/
 anki/.local/share/Anki2/crash.log
+transmission/.config/transmission-daemon/torrents/
