--- a/transmission/.config/transmission-daemon/settings.json
+++ b/transmission/.config/transmission-daemon/settings.json
@@ -18,7 +18,7 @@
     "encryption": 1,
     "idle-seeding-limit": 30,
     "idle-seeding-limit-enabled": false,
-    "incomplete-dir": "/home/gian/Torrents",
+    "incomplete-dir": "/home/gian/Downloads/Torrents",
     "incomplete-dir-enabled": true,
     "lpd-enabled": false,
     "message-level": 2,
