--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ anki/.local/share/Anki2/crash.log
 transmission/.config/transmission-daemon/torrents/
 transmission/.config/transmission-daemon/dht.dat
 transmission/.config/transmission-daemon/resume/
+w3m/.w3m/cookie
+w3m/.w3m/history
