--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ cmus/.config/cmus/search-history
 vifm/.config/vifm/vifminfo_943
 calcurse/.config/calcurse/.calcurse.pid
 qutebrowser/.config/qutebrowser/qsettings/
+weechat/.config/weechat/weechat.log
