Ignore plugins neovim

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ vifm/.config/vifm/vifminfo_943
 calcurse/.config/calcurse/.calcurse.pid
 qutebrowser/.config/qutebrowser/qsettings/
 weechat/.config/weechat/weechat.log
+editor/.config/nvim/.netrwhist
+editor/.config/nvim/autoload/
+editor/.config/nvim/plugged/
