Ignore crash report firefox

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ weechat/.config/weechat/weechat.log
 editor/.config/nvim/.netrwhist
 editor/.config/nvim/autoload/
 editor/.config/nvim/plugged/
+browser/.mozilla/firefox/Crash Reports/
