--- a/init/.gitconfig
+++ b/init/.gitconfig
@@ -1,3 +1,8 @@
 [user]
 	email = giantadori@gmail.com
 	name = Gianluca
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
