--- a/init/.config/fontconfig/fonts.conf
+++ b/init/.config/fontconfig/fonts.conf
@@ -1,4 +1,4 @@
  <alias>
   <family>monospace</family>
-    <prefer><family>FantasqueSansMono Nerd Font Mono</family></prefer>
+    <prefer><family>FantasqueSansMono</family></prefer>
   </alias>
