--- a/init/.tmux.conf
+++ b/init/.tmux.conf
@@ -34,42 +34,42 @@ unbind r
 bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 
-# --- colors (solarized dark)
-# default statusbar colors
-set -g status-bg black
-set -g status-fg yellow
-set -g status-attr default
+# # --- colors (solarized dark)
+# # default statusbar colors
+# set -g status-bg black
+# set -g status-fg yellow
+# set -g status-attr default
 
-# # default window title colors
-setw -g window-status-fg brightblue
-setw -g window-status-bg default
+# # # default window title colors
+# setw -g window-status-fg brightblue
+# setw -g window-status-bg default
 
-# # active window title colors
-setw -g window-status-current-fg yellow
-setw -g window-status-current-bg default
-setw -g window-status-current-attr dim
+# # # active window title colors
+# setw -g window-status-current-fg yellow
+# setw -g window-status-current-bg default
+# setw -g window-status-current-attr dim
 
-# # pane border
-set -g pane-border-fg black
-set -g pane-border-bg default
-set -g pane-active-border-fg yellow
-set -g pane-active-border-bg default
+# # # pane border
+# set -g pane-border-fg black
+# set -g pane-border-bg default
+# set -g pane-active-border-fg yellow
+# set -g pane-active-border-bg default
 
-# # command line/message text
-set -g message-bg black
-set -g message-fg yellow
+# # # command line/message text
+# set -g message-bg black
+# set -g message-fg yellow
 
-# # pane number display
-set -g display-panes-active-colour yellow
-set -g display-panes-colour brightblue
+# # # pane number display
+# set -g display-panes-active-colour yellow
+# set -g display-panes-colour brightblue
 
-# # clock
-setw -g clock-mode-colour yellow
-# --- end colors
+# # # clock
+# setw -g clock-mode-colour yellow
+# # --- end colors
 
-set -g status-position top               # statusbar position
-set -g status-interval 1
-set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})'
-set -g window-status-current-format '[#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})]'
-set -g status-right-length 120
-set -g status-right '#(date +"%H:%M") | #(cat /sys/class/power_supply/BAT0/capacity)% '
+# set -g status-position top               # statusbar position
+# set -g status-interval 1
+# set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})'
+# set -g window-status-current-format '[#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})]'
+# set -g status-right-length 120
+# set -g status-right '#(date +"%H:%M") | #(cat /sys/class/power_supply/BAT0/capacity)% '
