--- a/init/.tmux.conf
+++ b/init/.tmux.conf
@@ -1,4 +1,6 @@
 set -s escape-time 0
+set -g default-terminal "screen-256color"
+
 
 # Smart pane switching with awareness of Vim splits.
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -36,8 +38,8 @@ bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # # --- colors (solarized dark)
 # # default statusbar colors
-# set -g status-bg black
-# set -g status-fg yellow
+set -g status-bg black
+set -g status-fg yellow
 # set -g status-attr default
 
 # # # default window title colors
@@ -55,21 +57,21 @@ bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 # set -g pane-active-border-fg yellow
 # set -g pane-active-border-bg default
 
-# # # command line/message text
+# # command line/message text
 # set -g message-bg black
 # set -g message-fg yellow
 
-# # # pane number display
-# set -g display-panes-active-colour yellow
-# set -g display-panes-colour brightblue
+# # pane number display
+set -g display-panes-active-colour yellow
+set -g display-panes-colour brightblue
 
-# # # clock
-# setw -g clock-mode-colour yellow
-# # --- end colors
+# # clock
+setw -g clock-mode-colour yellow
+# --- end colors
 
-# set -g status-position top               # statusbar position
-# set -g status-interval 1
-# set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})'
-# set -g window-status-current-format '[#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})]'
-# set -g status-right-length 120
-# set -g status-right '#(date +"%H:%M") | #(cat /sys/class/power_supply/BAT0/capacity)% '
+set -g status-position top               # statusbar position
+set -g status-interval 1
+set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})'
+set -g window-status-current-format '[#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})]'
+set -g status-right-length 120
+set -g status-right '#(date +"%H:%M") | #(cat /sys/class/power_supply/BAT0/capacity)% '
